[gd_scene load_steps=6 format=2]

[ext_resource path="res://Items/Tooth.gd" type="Script" id=1]
[ext_resource path="res://Items/ToothCurrency.png" type="Texture" id=2]
[ext_resource path="res://Enemies/PlayerDetectionZone.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="CircleShape2D" id=2]
radius = 24.1868

[node name="Tooth" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.788235, 0.784314, 0.67451, 1 )
light_mask = 2
position = Vector2( 0, -3 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
light_mask = 2
margin_left = -4.0
margin_top = -8.0
margin_right = 4.0
color = Color( 0.937255, 0.827451, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickupArea" type="Area2D" parent="."]
position = Vector2( 0, -3 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource( 1 )

[node name="PlayerDetectionZone" type="Area2D" parent="."]
position = Vector2( 0, -3 )
collision_layer = 0
collision_mask = 4
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource( 2 )
[connection signal="body_entered" from="PickupArea" to="." method="_on_PickupArea_body_entered"]
[connection signal="body_entered" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_entered"]
